Fix wrapping of the level filter items

--- a/client/components/Generic/Filters.scss
+++ b/client/components/Generic/Filters.scss
@@ -17,6 +17,9 @@
   > form {
     margin-top: 1em;
     word-wrap: break-word;
+    & .fields {
+      flex-flow: wrap;
+    }
   }
 }
 
